--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,6 +9,10 @@
   --font-mono: var(--font-geist-mono);
 }
 
+html{
+  scroll-behavior: smooth;
+}
+
 body{
   background-color: black;
   color: var(--text-color);
@@ -111,6 +115,53 @@ body{
   }
 }
 
+::-webkit-scrollbar {
+  width: 0.8rem;
+}
+
+::-webkit-scrollbar-track {
+  border: 7px solid #292c3b;
+  box-shadow: inset 0 0 2.5px 2px rgba(0, 0, 0, 0.5);
+  border-radius: 4px;
+  background-color: #b4b4b8;
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 2px;
+  background-color: #888;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #555;
+}
+
+
+.scroll2Top{
+  background: rgba(25,118,210,0.85);
+  width: 2.6rem;
+  height: 2.6rem;
+  border-radius: 50%;
+  position: fixed;
+  bottom: 2rem;
+  right: 3%;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid rgba(255, 255, 255, 0.2)
+}
+
+.scroll2Top:hover{
+  background: rgba(25,118,210);
+}
+
+@media (max-width: 640px){
+  .scroll2Top{
+  opacity: 0.5;
+    width: 2.2rem;
+  height: 2.2rem;
+}
+}
 
 
 @layer base {
