edit some style

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -148,7 +148,8 @@ body{
   display: flex;
   align-items: center;
   justify-content: center;
-  border: 1px solid rgba(255, 255, 255, 0.2)
+  border: 1px solid rgba(255, 255, 255, 0.2);
+  font-size: 1.3rem;
 }
 
 .scroll2Top:hover{
@@ -158,8 +159,9 @@ body{
 @media (max-width: 640px){
   .scroll2Top{
   opacity: 0.5;
-    width: 2.2rem;
+  width: 2.2rem;
   height: 2.2rem;
+  font-size: 1.3rem;
 }
 }
 
